Fix pop-up calendar visible in default state

--- a/styles/main.less
+++ b/styles/main.less
@@ -1197,6 +1197,7 @@ form.trips{
 #ui-datepicker-div{
     .mixin-form-input-active;
     .mixin-default-label;
+    display: none;
     margin-left: -1px;
     padding: 0.25em;
     font-size: 1.375em;
